--- a/PasscodeLockDemo/Base.lproj/Main.storyboard
+++ b/PasscodeLockDemo/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad9_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,60 +18,59 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Passcode:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNW-hY-03M">
-                                <rect key="frame" x="314.5" y="178" width="79" height="21"/>
+                                <rect key="frame" x="118" y="202" width="79" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mm8-A7-rJo">
-                                <rect key="frame" x="403.5" y="173" width="51" height="31"/>
+                                <rect key="frame" x="207" y="197" width="51" height="31"/>
                                 <connections>
                                     <action selector="passcodeSwitchValueChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="jNq-f0-MQm"/>
                                 </connections>
                             </switch>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hX3-sK-N1u">
-                                <rect key="frame" x="322" y="224" width="124" height="30"/>
+                                <rect key="frame" x="125.66666666666669" y="248" width="124" height="30"/>
                                 <state key="normal" title="Change Passcode"/>
                                 <connections>
                                     <action selector="changePasscodeButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NuA-mw-aCy"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0sQ-Ot-x0k">
-                                <rect key="frame" x="322.5" y="28" width="123" height="30"/>
+                                <rect key="frame" x="126" y="52" width="123" height="30"/>
                                 <state key="normal" title="Test with Alert VC"/>
                                 <connections>
                                     <action selector="testAlertButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="krs-eb-ebn"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FWy-5L-Ls0">
-                                <rect key="frame" x="313.5" y="68" width="141" height="30"/>
+                                <rect key="frame" x="117" y="92" width="141" height="30"/>
                                 <state key="normal" title="Test with Activity VC"/>
                                 <connections>
                                     <action selector="testActivityButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2ep-zy-BSy"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Test with Keyboard" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rmd-tl-sFf">
-                                <rect key="frame" x="284" y="118" width="200" height="30"/>
+                                <rect key="frame" x="115.66666666666667" y="142" width="144.33333333333331" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="2f1-0e-7l4"/>
-                                    <constraint firstAttribute="width" constant="200" id="ObS-uG-Gt6"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DDy-pO-1qt">
-                                <rect key="frame" x="324" y="274" width="120" height="30"/>
+                                <rect key="frame" x="127.66666666666669" y="298" width="120" height="30"/>
                                 <state key="normal" title="Authenticate now"/>
                                 <connections>
                                     <action selector="authenticateNowButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4m7-2T-exv"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dqg-TH-zse">
-                                <rect key="frame" x="301" y="324" width="166" height="30"/>
+                                <rect key="frame" x="104" y="348" width="167" height="30"/>
                                 <state key="normal" title="Authenticate now (Dark)"/>
                                 <connections>
                                     <action selector="authenticateNowButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AIf-IA-fN4"/>
