--- a/PasscodeLockDemo/Base.lproj/Main.storyboard
+++ b/PasscodeLockDemo/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_9" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,25 +19,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Passcode:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNW-hY-03M">
-                                <rect key="frame" x="118" y="202" width="79" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mm8-A7-rJo">
-                                <rect key="frame" x="207" y="197" width="51" height="31"/>
-                                <connections>
-                                    <action selector="passcodeSwitchValueChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="jNq-f0-MQm"/>
-                                </connections>
-                            </switch>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hX3-sK-N1u">
-                                <rect key="frame" x="125.66666666666669" y="248" width="124" height="30"/>
-                                <state key="normal" title="Change Passcode"/>
-                                <connections>
-                                    <action selector="changePasscodeButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NuA-mw-aCy"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0sQ-Ot-x0k">
                                 <rect key="frame" x="126" y="52" width="123" height="30"/>
                                 <state key="normal" title="Test with Alert VC"/>
@@ -55,13 +34,32 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Test with Keyboard" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rmd-tl-sFf">
-                                <rect key="frame" x="115.66666666666667" y="142" width="144.33333333333331" height="30"/>
+                                <rect key="frame" x="112.00000000000001" y="142" width="151.33333333333337" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="2f1-0e-7l4"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Passcode:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNW-hY-03M">
+                                <rect key="frame" x="118" y="202" width="79" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mm8-A7-rJo">
+                                <rect key="frame" x="207" y="197" width="51" height="31"/>
+                                <connections>
+                                    <action selector="passcodeSwitchValueChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="jNq-f0-MQm"/>
+                                </connections>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hX3-sK-N1u">
+                                <rect key="frame" x="125.66666666666669" y="248" width="124" height="30"/>
+                                <state key="normal" title="Change Passcode"/>
+                                <connections>
+                                    <action selector="changePasscodeButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NuA-mw-aCy"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DDy-pO-1qt">
                                 <rect key="frame" x="127.66666666666669" y="298" width="120" height="30"/>
                                 <state key="normal" title="Authenticate now"/>
@@ -69,15 +67,7 @@
                                     <action selector="authenticateNowButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4m7-2T-exv"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dqg-TH-zse">
-                                <rect key="frame" x="104" y="348" width="167" height="30"/>
-                                <state key="normal" title="Authenticate now (Dark)"/>
-                                <connections>
-                                    <action selector="authenticateNowButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AIf-IA-fN4"/>
-                                </connections>
-                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="xNW-hY-03M" firstAttribute="top" secondItem="rmd-tl-sFf" secondAttribute="bottom" constant="30" id="2zO-aG-LMc"/>
@@ -86,12 +76,10 @@
                             <constraint firstItem="0sQ-Ot-x0k" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Lnz-UM-hdk"/>
                             <constraint firstItem="rmd-tl-sFf" firstAttribute="top" secondItem="FWy-5L-Ls0" secondAttribute="bottom" constant="20" id="Q1Z-1n-y86"/>
                             <constraint firstItem="xNW-hY-03M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-30" id="S6v-lm-4Ph"/>
-                            <constraint firstItem="Dqg-TH-zse" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="V5M-cI-EOX"/>
                             <constraint firstItem="DDy-pO-1qt" firstAttribute="top" secondItem="hX3-sK-N1u" secondAttribute="bottom" constant="20" id="XGA-4K-WAh"/>
                             <constraint firstItem="DDy-pO-1qt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bD9-jI-LSu"/>
                             <constraint firstItem="rmd-tl-sFf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="d3e-lg-VyU"/>
                             <constraint firstItem="FWy-5L-Ls0" firstAttribute="top" secondItem="0sQ-Ot-x0k" secondAttribute="bottom" constant="10" id="dXe-7d-aSS"/>
-                            <constraint firstItem="Dqg-TH-zse" firstAttribute="top" secondItem="DDy-pO-1qt" secondAttribute="bottom" constant="20" id="dZZ-bK-pnz"/>
                             <constraint firstItem="hX3-sK-N1u" firstAttribute="top" secondItem="mm8-A7-rJo" secondAttribute="bottom" constant="20" id="gzu-mf-ese"/>
                             <constraint firstItem="0sQ-Ot-x0k" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="l3Q-sY-BMc"/>
                             <constraint firstItem="mm8-A7-rJo" firstAttribute="leading" secondItem="xNW-hY-03M" secondAttribute="trailing" constant="10" id="si3-7E-qvZ"/>
